ass1/initial/src/main/d96/parser/.antlr/D96Parser.py
# Generated from f:\Documents\Dai_hoc\nam3_ki2\PPL\ass1\initial\src\main\d96\parser\D96.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class D96Parser ( Parser ):

    grammarFileName = "D96.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'main'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'Int'", "'Float'", "'String'", "'Boolean'", "'Void'", 
                     "'class'", "'Val'", "'Var'", "'Break'", "'Foreach '", 
                     "'Null'", "'Constructor'", "' Destructor'", "'Continue'", 
                     "'True'", "'If'", "'False'", "'New'", "'Else'", "'Elseif'", 
                     "'By'", "'Return'", "'In'", "'Array'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'('", "')'", "'{'", "'}'", 
                     "';'", "':'", "','", "'['", "']'", "'+'", "'-'", "'*'", 
                     "'/'", "'%'", "'!'", "'||'", "'&&'", "'!='", "'=='", 
                     "'='", "'<'", "'>'", "'<='", "'>='", "'.'", "'==.'", 
                     "'+.'", "'::'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "INT_LITERAL", "Dec", "Bin", 
                      "Hex", "Otc", "Nonzerodigit", "Digit", "Bindigit", 
                      "Octdigit", "Hexdigit", "FL_LITERAL", "FRACPART", 
                      "EXPPART", "BOOL_LITERAL", "STRING_LITERAL", "INTTYPE", 
                      "FLOATTYPE", "STRTYPE", "BOOLTYPE", "VOIDTYPE", "CLASS", 
                      "VAL", "VAR", "BREAK", "FOREACH", "NULL", "CONSTRUC", 
                      "DESTRUC", "CONTINUE", "TRUE", "IF", "FALSE", "NEW", 
                      "ELSE", "ELSEIF", "BY", "RETURN", "IN", "ARRAY", "BLOCK_COMMENT", 
                      "ID", "INTLIT", "LB", "RB", "LP", "RP", "SEMI", "COLON", 
                      "CM", "LSB", "RSB", "ADD", "SUB", "MUL", "DIV", "MOD", 
                      "NOT", "OR", "AND", "NEQ", "EQ", "ASSIGN", "LT", "GT", 
                      "LE", "GE", "DOT", "COMPARE_STRINGS", "CONCATENATE_STRINGS", 
                      "ACCESS", "WS", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", 
                      "ERROR_CHAR", "UNTERMINATED_COMMENT" ]

    RULE_class_declare = 0
    RULE_body_class = 1
    RULE_code_list = 2
    RULE_attribute_declare = 3
    RULE_data_types = 4
    RULE_values_list = 5
    RULE_program = 6
    RULE_mptype = 7
    RULE_body = 8
    RULE_exp = 9
    RULE_funcall = 10
    RULE_array = 11
    RULE_params_list_sametype = 12
    RULE_multi_array = 13
    RULE_arrays = 14
    RULE_exp_bool = 15
    RULE_exp_int = 16
    RULE_exp_real = 17
    RULE_exp_str = 18
    RULE_exp1 = 19
    RULE_exp2 = 20
    RULE_exp3 = 21
    RULE_exp4 = 22
    RULE_operands = 23
    RULE_literal = 24
    RULE_call_exp = 25
    RULE_params_list = 26

    ruleNames =  [ "class_declare", "body_class", "code_list", "attribute_declare", 
                   "data_types", "values_list", "program", "mptype", "body", 
                   "exp", "funcall", "array", "params_list_sametype", "multi_array", 
                   "arrays", "exp_bool", "exp_int", "exp_real", "exp_str", 
                   "exp1", "exp2", "exp3", "exp4", "operands", "literal", 
                   "call_exp", "params_list" ]

    EOF = Token.EOF
    T__0=1
    INT_LITERAL=2
    Dec=3
    Bin=4
    Hex=5
    Otc=6
    Nonzerodigit=7
    Digit=8
    Bindigit=9
    Octdigit=10
    Hexdigit=11
    FL_LITERAL=12
    FRACPART=13
    EXPPART=14
    BOOL_LITERAL=15
    STRING_LITERAL=16
    INTTYPE=17
    FLOATTYPE=18
    STRTYPE=19
    BOOLTYPE=20
    VOIDTYPE=21
    CLASS=22
    VAL=23
    VAR=24
    BREAK=25
    FOREACH=26
    NULL=27
    CONSTRUC=28
    DESTRUC=29
    CONTINUE=30
    TRUE=31
    IF=32
    FALSE=33
    NEW=34
    ELSE=35
    ELSEIF=36
    BY=37
    RETURN=38
    IN=39
    ARRAY=40
    BLOCK_COMMENT=41
    ID=42
    INTLIT=43
    LB=44
    RB=45
    LP=46
    RP=47
    SEMI=48
    COLON=49
    CM=50
    LSB=51
    RSB=52
    ADD=53
    SUB=54
    MUL=55
    DIV=56
    MOD=57
    NOT=58
    OR=59
    AND=60
    NEQ=61
    EQ=62
    ASSIGN=63
    LT=64
    GT=65
    LE=66
    GE=67
    DOT=68
    COMPARE_STRINGS=69
    CONCATENATE_STRINGS=70
    ACCESS=71
    WS=72
    UNCLOSE_STRING=73
    ILLEGAL_ESCAPE=74
    ERROR_CHAR=75
    UNTERMINATED_COMMENT=76

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Class_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(D96Parser.CLASS, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.ID)
            else:
                return self.getToken(D96Parser.ID, i)

        def LP(self):
            return self.getToken(D96Parser.LP, 0)

        def body_class(self):
            return self.getTypedRuleContext(D96Parser.Body_classContext,0)


        def RP(self):
            return self.getToken(D96Parser.RP, 0)

        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_class_declare




    def class_declare(self):

        localctx = D96Parser.Class_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_class_declare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.match(D96Parser.CLASS)
            self.state = 55
            self.match(D96Parser.ID)
            self.state = 58
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.COLON:
                self.state = 56
                self.match(D96Parser.COLON)
                self.state = 57
                self.match(D96Parser.ID)


            self.state = 60
            self.match(D96Parser.LP)
            self.state = 61
            self.body_class()
            self.state = 62
            self.match(D96Parser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Body_classContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def code_list(self):
            return self.getTypedRuleContext(D96Parser.Code_listContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_body_class




    def body_class(self):

        localctx = D96Parser.Body_classContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_body_class)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.code_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Code_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute_declare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.Attribute_declareContext)
            else:
                return self.getTypedRuleContext(D96Parser.Attribute_declareContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_code_list




    def code_list(self):

        localctx = D96Parser.Code_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_code_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 66
                self.attribute_declare()
                self.state = 69 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==D96Parser.VAL or _la==D96Parser.VAR):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attribute_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAL(self):
            return self.getToken(D96Parser.VAL, 0)

        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def data_types(self):
            return self.getTypedRuleContext(D96Parser.Data_typesContext,0)


        def ASSIGN(self):
            return self.getToken(D96Parser.ASSIGN, 0)

        def values_list(self):
            return self.getTypedRuleContext(D96Parser.Values_listContext,0)


        def SEMI(self):
            return self.getToken(D96Parser.SEMI, 0)

        def VAR(self):
            return self.getToken(D96Parser.VAR, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_attribute_declare




    def attribute_declare(self):

        localctx = D96Parser.Attribute_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_attribute_declare)
        try:
            self.state = 87
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.VAL]:
                self.enterOuterAlt(localctx, 1)
                self.state = 71
                self.match(D96Parser.VAL)
                self.state = 72
                self.match(D96Parser.ID)
                self.state = 73
                self.match(D96Parser.COLON)
                self.state = 74
                self.data_types()
                self.state = 75
                self.match(D96Parser.ASSIGN)
                self.state = 76
                self.values_list()
                self.state = 77
                self.match(D96Parser.SEMI)
                pass
            elif token in [D96Parser.VAR]:
                self.enterOuterAlt(localctx, 2)
                self.state = 79
                self.match(D96Parser.VAR)
                self.state = 80
                self.match(D96Parser.ID)
                self.state = 81
                self.match(D96Parser.COLON)
                self.state = 82
                self.data_types()
                self.state = 83
                self.match(D96Parser.ASSIGN)
                self.state = 84
                self.values_list()
                self.state = 85
                self.match(D96Parser.SEMI)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Data_typesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTLIT(self):
            return self.getToken(D96Parser.INTLIT, 0)

        def FLOATTYPE(self):
            return self.getToken(D96Parser.FLOATTYPE, 0)

        def STRTYPE(self):
            return self.getToken(D96Parser.STRTYPE, 0)

        def BOOLTYPE(self):
            return self.getToken(D96Parser.BOOLTYPE, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_data_types




    def data_types(self):

        localctx = D96Parser.Data_typesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_data_types)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << D96Parser.FLOATTYPE) | (1 << D96Parser.STRTYPE) | (1 << D96Parser.BOOLTYPE) | (1 << D96Parser.INTLIT))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Values_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Digit(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.Digit)
            else:
                return self.getToken(D96Parser.Digit, i)

        def ADD(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.ADD)
            else:
                return self.getToken(D96Parser.ADD, i)

        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.CM)
            else:
                return self.getToken(D96Parser.CM, i)

        def getRuleIndex(self):
            return D96Parser.RULE_values_list




    def values_list(self):

        localctx = D96Parser.Values_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_values_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==D96Parser.CM:
                    self.state = 91
                    self.match(D96Parser.CM)


                self.state = 98
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                if la_ == 1:
                    self.state = 94
                    self.match(D96Parser.Digit)
                    pass

                elif la_ == 2:
                    self.state = 95
                    self.match(D96Parser.Digit)
                    self.state = 96
                    self.match(D96Parser.ADD)
                    self.state = 97
                    self.match(D96Parser.Digit)
                    pass


                self.state = 102 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==D96Parser.Digit or _la==D96Parser.CM):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mptype(self):
            return self.getTypedRuleContext(D96Parser.MptypeContext,0)


        def LB(self):
            return self.getToken(D96Parser.LB, 0)

        def RB(self):
            return self.getToken(D96Parser.RB, 0)

        def LP(self):
            return self.getToken(D96Parser.LP, 0)

        def RP(self):
            return self.getToken(D96Parser.RP, 0)

        def EOF(self):
            return self.getToken(D96Parser.EOF, 0)

        def body(self):
            return self.getTypedRuleContext(D96Parser.BodyContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_program




    def program(self):

        localctx = D96Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.mptype()
            self.state = 105
            self.match(D96Parser.T__0)
            self.state = 106
            self.match(D96Parser.LB)
            self.state = 107
            self.match(D96Parser.RB)
            self.state = 108
            self.match(D96Parser.LP)
            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.ID:
                self.state = 109
                self.body()


            self.state = 112
            self.match(D96Parser.RP)
            self.state = 113
            self.match(D96Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MptypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTTYPE(self):
            return self.getToken(D96Parser.INTTYPE, 0)

        def VOIDTYPE(self):
            return self.getToken(D96Parser.VOIDTYPE, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_mptype




    def mptype(self):

        localctx = D96Parser.MptypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_mptype)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            _la = self._input.LA(1)
            if not(_la==D96Parser.INTTYPE or _la==D96Parser.VOIDTYPE):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcall(self):
            return self.getTypedRuleContext(D96Parser.FuncallContext,0)


        def SEMI(self):
            return self.getToken(D96Parser.SEMI, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_body




    def body(self):

        localctx = D96Parser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.funcall()
            self.state = 118
            self.match(D96Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcall(self):
            return self.getTypedRuleContext(D96Parser.FuncallContext,0)


        def INTLIT(self):
            return self.getToken(D96Parser.INTLIT, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_exp




    def exp(self):

        localctx = D96Parser.ExpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_exp)
        try:
            self.state = 122
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 120
                self.funcall()
                pass
            elif token in [D96Parser.INTLIT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 121
                self.match(D96Parser.INTLIT)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncallContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def LB(self):
            return self.getToken(D96Parser.LB, 0)

        def RB(self):
            return self.getToken(D96Parser.RB, 0)

        def exp(self):
            return self.getTypedRuleContext(D96Parser.ExpContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_funcall




    def funcall(self):

        localctx = D96Parser.FuncallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_funcall)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(D96Parser.ID)
            self.state = 125
            self.match(D96Parser.LB)
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.ID or _la==D96Parser.INTLIT:
                self.state = 126
                self.exp()


            self.state = 129
            self.match(D96Parser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(D96Parser.ARRAY, 0)

        def LP(self):
            return self.getToken(D96Parser.LP, 0)

        def params_list_sametype(self):
            return self.getTypedRuleContext(D96Parser.Params_list_sametypeContext,0)


        def RP(self):
            return self.getToken(D96Parser.RP, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_array




    def array(self):

        localctx = D96Parser.ArrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_array)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(D96Parser.ARRAY)
            self.state = 132
            self.match(D96Parser.LP)
            self.state = 133
            self.params_list_sametype()
            self.state = 134
            self.match(D96Parser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Params_list_sametypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT_LITERAL(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.INT_LITERAL)
            else:
                return self.getToken(D96Parser.INT_LITERAL, i)

        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.CM)
            else:
                return self.getToken(D96Parser.CM, i)

        def FL_LITERAL(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.FL_LITERAL)
            else:
                return self.getToken(D96Parser.FL_LITERAL, i)

        def STRING_LITERAL(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.STRING_LITERAL)
            else:
                return self.getToken(D96Parser.STRING_LITERAL, i)

        def BOOL_LITERAL(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.BOOL_LITERAL)
            else:
                return self.getToken(D96Parser.BOOL_LITERAL, i)

        def getRuleIndex(self):
            return D96Parser.RULE_params_list_sametype




    def params_list_sametype(self):

        localctx = D96Parser.Params_list_sametypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_params_list_sametype)
        self._la = 0 # Token type
        try:
            self.state = 168
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,17,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 140 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 137
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==D96Parser.CM:
                        self.state = 136
                        self.match(D96Parser.CM)


                    self.state = 139
                    self.match(D96Parser.INT_LITERAL)
                    self.state = 142 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==D96Parser.INT_LITERAL or _la==D96Parser.CM):
                        break

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 148 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 145
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==D96Parser.CM:
                        self.state = 144
                        self.match(D96Parser.CM)


                    self.state = 147
                    self.match(D96Parser.FL_LITERAL)
                    self.state = 150 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==D96Parser.FL_LITERAL or _la==D96Parser.CM):
                        break

                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 156 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 153
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==D96Parser.CM:
                        self.state = 152
                        self.match(D96Parser.CM)


                    self.state = 155
                    self.match(D96Parser.STRING_LITERAL)
                    self.state = 158 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==D96Parser.STRING_LITERAL or _la==D96Parser.CM):
                        break

                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 164 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 161
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==D96Parser.CM:
                        self.state = 160
                        self.match(D96Parser.CM)


                    self.state = 163
                    self.match(D96Parser.BOOL_LITERAL)
                    self.state = 166 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==D96Parser.BOOL_LITERAL or _la==D96Parser.CM):
                        break

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Multi_arrayContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(D96Parser.ARRAY, 0)

        def LP(self):
            return self.getToken(D96Parser.LP, 0)

        def arrays(self):
            return self.getTypedRuleContext(D96Parser.ArraysContext,0)


        def RP(self):
            return self.getToken(D96Parser.RP, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_multi_array



